# python-best-practices-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.repo_name}}/: .coveragerc  .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.cfg
